app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment-2
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: frontend
        image: CHANGEME.azurecr.io/test/node-web-app-win:latest
        ports:
        - containerPort: 3000
