curl.yml
apiVersion: v1
kind: Pod
metadata:
  name: testcurl
  labels:
    app: app2
spec:
  nodeSelector:
    kubernetes.io/os: linux
  containers:
  - name: curl
    image: crweupjdev.azurecr.io/curlimages/curl:latest 
    command: [ "sleep", "600" ]
