app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      nodeSelector:
        kubernetes.io/os: windows
      containers:
      - name: frontend
        image: crweupjdev.azurecr.io/test/node-web-app-win:latest
        ports:
        - containerPort: 8080
      - name: backend
        image: crweupjdev.azurecr.io/test/node-web-app-win:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: feservice
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
