policy2.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: app1
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
       matchLabels:
         app: app2
    ports:
    - protocol: TCP
      port: 8080
